[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen-a-maze-ing"
version = "1.0.0"
description = "Maze generator and solver"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

authors = [
    {name = "Saad"}
]

dependencies = []

[project.scripts]
mazegen = "mazegen.a_maze_ing:main"
